Bug 1607375 - Generate mouse exit event to old remote target when the mouse event is moving to another remote target; r=hsivonen,smaug

If a mouse is over a remote target A, and then moves to remote target B,
we'd deliver the event directly to remote target B after the moving, A would
never get notified that the mouse left. And A would synthesizes mousemove event
on an incorrect point which then generates an unexpected mouseleave.

Differential Revision: https://phabricator.services.mozilla.com/D67408