dom/ipc/BrowserParent.h
@@ -118,6 +118,8 @@ class BrowserParent final : public PBrowserParent,
    */
   static BrowserParent* GetFocused();
 
+  static BrowserParent* GetLastMouseRemoteTarget();
+
   static BrowserParent* GetFrom(nsFrameLoader* aFrameLoader);
 
   static BrowserParent* GetFrom(PBrowserParent* aBrowserParent);
@@ -847,6 +849,13 @@ class BrowserParent final : public PBrowserParent,
 
   // Recomputes sFocus and returns it.
   static BrowserParent* UpdateFocus();
+
+  // Keeps track of which BrowserParent the real mouse event is sent to.
+  static BrowserParent* sLastMouseRemoteTarget;
+
+  // Unsetter for LastMouseRemoteTarget; only unsets if argument matches
+  // current sLastMouseRemoteTarget.
+  static void UnsetLastMouseRemoteTarget(BrowserParent* aBrowserParent);
 
   struct APZData {
     bool operator==(const APZData& aOther) {
